--- a/EmployeeTable/Views/Employee/Index.cshtml
+++ b/EmployeeTable/Views/Employee/Index.cshtml
@@ -30,10 +30,10 @@
                 <h5></h5>
             </div>
             <div class="">
-                <button type="button" class="btn btn-primary ml-md-auto" id="btnAdd">add</button>
-                <button type="button" class="btn btn-primary ml-md-auto" id="btnModify">modify</button>
-                <button type="button" class="btn btn-primary ml-md-auto" id="btnSave">save</button>
-                <button type="button" class="btn btn-primary ml-md-auto" id="btnCancel">cancel</button>
+                <button type="button" class="btn btn-primary ml-md-auto" id="btnAdd">新增</button>
+                <button type="button" class="btn btn-primary ml-md-auto" id="btnModify">修改</button>
+                <button type="button" class="btn btn-primary ml-md-auto" id="btnSave">保存</button>
+                <button type="button" class="btn btn-primary ml-md-auto" id="btnCancel">取消</button>
             </div>
         </div>
         <form>
