--- a/EmployeeTable/Views/Employee/Index.cshtml
+++ b/EmployeeTable/Views/Employee/Index.cshtml
@@ -17,7 +17,7 @@
 <body>
 
     <div class="container text-center">
-        <h1>員工</h1>
+        <h1>員工資料維護</h1>
         <hr>
         <div class="d-flex justify-content-between">
             <div class="input-group col-3">
